@@ -2197,7 +2197,7 @@ list_store_text (GMarkupParseContext *context,
 
   string = g_strndup (text, text_len);
   if (!gtk_builder_value_from_string_type (data->builder,
-					   data->column_types[i],
+					   data->column_types[info->id],
 					   string,
 					   &data->values[i],
 					   &tmp_error))
@@ -2206,7 +2206,7 @@ list_store_text (GMarkupParseContext *context,
 		   tmp_error->domain,
 		   tmp_error->code,
 		   "Could not convert '%s' to type %s: %s\n",
-		   text, g_type_name (data->column_types[i]),
+		   text, g_type_name (data->column_types[info->id]),
 		   tmp_error->message);
       g_error_free (tmp_error);
     }
