@@ -1,3 +1,11 @@
+2008-05-25  Johan Dahlin  <johan@gnome.org>
+
+	Merge from trunk:
+
+	* gtk/gtkliststore.c: (list_store_text): Use type of the correct
+	column (#529535).
+	* tests/buildertest.c: (test_list_store): Add test.
+
 2008-05-30  Tor Lillqvist  <tml@novell.com>
 
 	Bug 533108 - leak of GDI region in function 'handle_wm_paint'
